--- a/style_last.css
+++ b/style_last.css
@@ -1,16 +1,79 @@
 body{
-    background-color:rgb(186, 255, 242) ;
+  background-color:rgb(186, 255, 242) ;
 }
 
 #btn1{
   font-size: 40px;
-  margin-left: 300px;
   border: none;
   border-radius: 10px;
   background-color: rgb(255, 81, 209);
+  position:absolute;
+  right: 10px;
+  bottom:10px;
 }
 
 #btn2{
   position:absolute;
-  top: 300px;
+  bottom: 10px;
+  font-size: 30px;
+  border: none;
+  border-radius: 10px;
+  background-color: rgb(183, 180, 255);
+}
+
+#back{
+  background-image:url("hanabi.png");
+  background-size: cover;
+  position:fixed;
+  top:0px;
+  bottom:0px;
+  right:0px;
+  left:0px;
+  z-index:1;
+  display:none;
+  opacity:0.7
+}
+
+#ctr{
+  background: rgb(0, 13, 255);
+  color:rgb(255, 255, 255);
+  position:fixed;
+  width:75%;
+  border-radius: 10px;
+  top:32%;
+  left:10%;
+  z-index:2;
+  text-align:center;
+  display:none;
+  font-size: 40px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif ;
+  font-weight: bold;
+  padding:0;
+}
+
+#list{
+  font-size: 20px;
+}
+
+#goal{
+  margin-left: 20px;
+  font-size: 25px;
+}
+
+#clear{
+  width:250px;
+  height:100px;
+  position:absolute;
+  left:220px;
+  top: 335px;
+  display:none;
+}
+
+
+#code{
+  width:350px;
+  height:400px;
+  position:absolute;
+  left:800px;
+  top: 10px;
 }
