--- a/style_point.css
+++ b/style_point.css
@@ -83,16 +83,20 @@ h4{
 }
 
 #btn1{
-  height: 50px;
+  position:absolute;
+  bottom: 10px;
+  font-size: 20px;
   border: none;
   border-radius: 10px;
   background-color: rgb(84, 179, 252);
 }
 
 #btn2{
-  height: 50px;
-  margin-left:30px;
+  font-size: 20px;
   border: none;
   border-radius: 10px;
+  position:absolute;
+  right: 10px;
+  bottom:10px;
   background-color: rgb(84, 179, 252);
 }
