--- a/style_app.css
+++ b/style_app.css
@@ -1,6 +1,6 @@
 body {  
   text-align: center;  
-  background-image:url("cool_digital.png");
+  background-image:url("spot_light.png");
   background-size: cover;
   width: 99%;
 }
