--- a/style_last.css
+++ b/style_last.css
@@ -40,7 +40,7 @@ body{
   left:0px;
   z-index:1;
   display:none;
-  opacity:0.7
+  opacity:0.7;
 }
 
 #ctr{
@@ -55,7 +55,7 @@ body{
   text-align:center;
   display:none;
   font-size: 40px;
-  font-family:Verdana, Geneva, Tahoma, sans-serif ;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
   padding:0;
 }
