--- a/style_top.css
+++ b/style_top.css
@@ -6,17 +6,15 @@ body {
 h1 {
   font-size: 60px;
   text-align: center;
-  line-height: 400px;
-  margin:0%;
-}
-
-#span1 {
-  background-color: chartreuse;    
+  line-height: 80px;
+  margin-top:15%;
+  background-color: chartreuse; 
 }
 
 h2 {
   line-height: 20px;
   text-align: center;
+  margin-top:10%;
 }
 
 button {
